2005-07-14  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added GX 8 in ptp mode.

2005-07-08  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Borrowed a Nikon D70 for a day
	  (thanks AJ!) and implemented:

	  F-Number, Focal Length, Exposure Metering Mode,
	  Focus Metering Mode, Flash Mode, Exposure Time,
	  Exposure Program Mode, Exposure Index (ISO),
	  Still Capture Mode, AF Illumination (dont know what
	  this is), AF Beep Mode.

2005-07-07  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Moved one Olympus product id to sierra
	  driver where it belongs.

2005-05-25  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Hub reverted the Kodak LS473 -> 743 change,
	  corrected again.

	* library.c: Eos Mark II D has root bug too.

2005-05-14  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added a /special folder for camera specific
	  non ptp filesystem data.

	  (Canon: theme data, Nikon: Whitebalance Curve, etc.)

	  Implemented Canon theme download (but still as a blob
	  file).

2005-05-08  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Get removeobject events for canons on delete.

2005-05-05  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added PowerShot SD500 aka IXUS 700

2005-04-26  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot A520.

2005-04-11  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Nikon D2Hs SLR.

2005-04-10  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.[ch]: 9010 and 9011 is Canon Theme
	  Download and Upload.

2005-04-05  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Pentax Optio 43WR (as reported)

2005-03-20  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Merged in most of the code from:
	ptpcanon 0.0.2
		 http://jalkapallo.org/superkolik/canon.html
	Capture 1.0.3
		 http://sf.net/projects/capture/
	into generic PTP property handling.

	Added camera prepare und unprepare capture handling.